# r3_monitoring

./: CMakeLists.txt  README.md  appcontroller.cpp  appcontroller.h  install.sh  main.cpp  main.py  main_r3_user.py  package.xml  plugin.xml  r3-monitoring-client.pro  r3_monitoring_user.py  r3_robot_main.py  r3_user_main.py  requirements.txt  setup.py  topic.h
config/: config_robot.py  config_user.yaml
core/: app_controller.py  compression.py  config.py  config_dialog.py  fake_image_publisher.py  r3_monitoring_client.py  ros_utils.py  serialization.py  system_stat.py  user_config.py  video_gstreamer.py
docker/: Dockerfile  run_r3_monitoring_on_docker.sh
form/: configurationdialog.cpp  configurationdialog.h  configurationdialog.ui
launch/: r3_robot.launch  r3_user.launch
python/: compression.py  config.py  r3_monitoring_client.py  serialization.py
r3/: r3_monitoring_user.py  user_config.py
r3_configs/: config_robot.py  config_robot.yaml
r3_core/: app_controller.py  compression.py  config_dialog.py  disk_utils.py  extract_ros_msg_structure.py  r3_monitoring_client.py  ros_utils.py  serialization.py  system_stat.py  video_gstreamer.py  wifi_utils.py
r3_system_stat/: system_stat.py
r3_test/: ros_faker.py
resource/: configs.yaml  resource.qrc  rqt_r3_monitoring.ui
scripts/: r3_robot_main.py  r3_user_main.py  rqt_r3_monitoring  system_stat.py
src/r3_monitoring/core/: compression.py  cv_bridge.py  extract_ros_msg_structure.py  r3_monitoring_client.py  robot_monitoring.py  ros_utils.py  serialization.py  user_receiver.py  video_gstreamer.py
src/r3_monitoring/utils/: wifi_utils.py
src/r3_monitoring_rqt/: r3_monitoring_plugin.py
test/: check_conenction_daley.py  check_conenction_delay.py  fake_image_publisher.py  ros_faker.py
